add testcase for snippet validation